css - hid 'zoom to' text from view to prevent overflow

--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,9 @@
 		height: 30px;
 	}
 	
-	.action .zoomTo{
+	.action.zoomTo{
 	display:none;
+	visibility:hidden;
 	}	
 #subtitle {
 	text-transform:none;
